fixed spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -415,7 +415,7 @@ color: #d1d1d1;
   margin-top: 4rem;
   margin-bottom: 15rem;
 transition: all .2s ease-in-out;
-row-gap: 6rem;
+/* row-gap: 6rem; */
 
   /* background-color: #F2F2F2; */
 
@@ -638,7 +638,7 @@ row-gap: 6rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* margin-top: 2rem; */
+  margin-top: 6rem;
   
 }
 
@@ -1038,6 +1038,9 @@ margin-right: 1.6rem;
       .jumbo h1 {
         margin-top: 40rem;
       }
+      .skewed{
+        border-width: 100px 2556px 0 0;
+      }
        }
 
 
@@ -1091,6 +1094,54 @@ margin-right: 1.6rem;
 }
 
 
+
+/* ----------- iPad Pro ----------- */
+/* Portrait and Landscape */
+@media only screen 
+  and (max-width: 1024px) 
+  and (min-height: 1366px) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    .jumbo{
+      margin-top: -14rem;
+      min-height: 70vh;
+      background-attachment: initial;
+    }
+}
+
+/* Portrait */
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+}
+
+/* Landscape */
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+
+}
+
+
+/* ----------- iPad Air ----------- */
+/* Portrait and Landscape */
+@media only screen 
+  and (max-width: 820px) 
+  and (min-height: 1180px) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    .jumbo{
+      margin-top: -12rem;
+      min-height: 60vh;
+      background-attachment: initial;
+    }
+}
+
+
+
+
 /* Tablet Mid */
 
 @media only screen and (max-width: 900px) {
@@ -1126,7 +1177,7 @@ margin-right: 1.6rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-            row-gap: 4rem;
+            /* row-gap: 4rem; */
   }
   .center-card{
     display: -webkit-box;
@@ -1146,15 +1197,15 @@ margin-right: 1.6rem;
   }
   .card1{
     width: 80%;
-    margin-bottom: 2rem;
+    margin-bottom: 6rem;
   }
   .card2{
     width: 80%;
-    margin-bottom: 2rem;
+    margin-bottom: 6rem;
   }
   .card3{
     width: 80%;
-    margin-bottom: 2rem;
+    margin-bottom: 6rem;
   }
   .card4{
     width: 80%;
@@ -1213,7 +1264,10 @@ margin-right: 1.6rem;
     
   } */
 
-  
+  .jumbo{
+    min-height: 70vh;
+   background-attachment: initial;
+  }
 
   .footer-main{
     padding: 8rem 2rem;
@@ -1338,6 +1392,25 @@ margin-right: 1.6rem;
     padding: 0px 0px;
     padding-top: 0rem;
    }
+
+
+   /* .card1{
+  
+    margin-bottom: 4rem;
+  }
+  .card2{
+   
+    margin-bottom: 4rem;
+  }
+  .card3{
+    
+    margin-bottom: 4rem;
+  }
+  .card4{
+ 
+    margin-bottom: 4rem;
+  } */
+
 
    .how-section{
     padding: 0px 1rem;
